--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Home page">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="keywords" content="Company, home, ABC">
     <meta name="author" content="Programming Hub">
     
