--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
      <div class="about-content">
        <h1>About us</h1>
        <p>
-        Please let me know if you need anything else from
-        me to come over and play with your hair and
+        Please let me know if you need anything<br> else from
+        me to come over and play with your <br> hair and
         I will be there.
        </p>
      </div>
