--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <div class="home">
      <!---Navbar --->
     <div class="nav">
-      <div>Company Name</div>
+      <div>Lays</div>
         <ul>
           <li><a href="" >Home</a></li>
           <li><a href="about.html" >About</a></li>
@@ -29,8 +29,8 @@
      
      <div class="text-container">
      <div>
-       <h1>Company Name</h1>
-       <h2>Tagline Goes Here</h2>
+       <h1>Lays Brandão</h1>
+       <h2>Lays é uma garota que gosta de espairecer e é bem metida e bastante estressada</h2>
      </div>
      </div>
      
