--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
    <div class="home">
      <!---Navbar --->
     <div class="nav">
-      <div>Company Name</div>
+      <div>Lays</div>
         <ul>
           <li><a href="index.html" >Home</a></li>
           <li><a href="about.html" >About</a></li>
