--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title></title>
+    <title>Nescau</title>
       <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -12,7 +12,7 @@
    <div class="home">
      <!---Navbar --->
     <div class="nav">
-      <div>Company Name</div>
+      <div>Lays</div>
         <ul>
           <li><a href="index.html" >Home</a></li>
           <li><a href="about.html" >About</a></li>
