--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
    <div class="home">
      <!---Navbar --->
     <div class="nav">
-      <div>Lays</div>
+      <div>Lays </div>
         <ul>
           <li><a href="index.html" >Home</a></li>
           <li><a href="about.html" >About</a></li>
@@ -58,6 +58,7 @@
      
      </div>
      </div>
+ <p>Assim eu sou</p>
      
 
   </body>
